--- a/app/frontend/css/base/variables.pcss
+++ b/app/frontend/css/base/variables.pcss
@@ -1,4 +1,5 @@
-@import "breakpoints.pcss";
-@import "colours.pcss";
-@import "spacing.pcss";
-@import "typography.pcss";
+@import "_breakpoints.pcss";
+@import "_colours.pcss";
+@import "_spacing.pcss";
+@import "_typography.pcss";
+@import "_shadows.pcss";
