Forgot to link all relevant files inside of variables.pcss

--- a/app/frontend/css/base/variables.pcss
+++ b/app/frontend/css/base/variables.pcss
@@ -3,3 +3,5 @@
 @import "_spacing.pcss";
 @import "_typography.pcss";
 @import "_shadows.pcss";
+@import "_borders.pcss";
+@import "_transitions.pcss";
