Completed Side Navigation component

--- a/app/frontend/packs/application.pcss
+++ b/app/frontend/packs/application.pcss
@@ -1,2 +1,4 @@
 @import "normalize.css/normalize";
 @import "../css/base/variables.pcss";
+@import "../css/base/defaults.pcss";
+@import "../css/components/index.pcss";
