New implementation for responsive app shell.

--- a/app/frontend/css/components/index.pcss
+++ b/app/frontend/css/components/index.pcss
@@ -1,3 +1,8 @@
 @import "_side-bar.pcss";
 @import "_side-nav.pcss";
 @import "_top-nav.pcss";
+@import "_drawer.pcss";
+@import "_list.pcss";
+@import "_top-app-bar.pcss";
+@import "_app-content.pcss";
+@import "_main-content.pcss";
