Move drawer toggle functionality into a Stimulus controller

--- a/app/views/layouts/_drawer.html.erb
+++ b/app/views/layouts/_drawer.html.erb
@@ -1,4 +1,4 @@
-<aside class="drawer" data-state="">
+<aside class="drawer" data-state="" data-controller="drawer" data-target="drawer.sidebar">
   <div class="drawer__content">
     <%= image_pack_tag 'workflow-logo-on-dark.svg', class: "drawer__logo" %>
     <%= render "layouts/side_menu" %>
