--- a/app/views/layouts/_top_app_bar.html.erb
+++ b/app/views/layouts/_top_app_bar.html.erb
@@ -1,7 +1,7 @@
 <header class="top-app-bar">
   <div class="top-app-bar__row">
     <section class="top-app-bar__section top-app-bar__section--align-start">
-      <button class="top-app-bar__button" role="button" data-button="hamburger">
+      <button class="top-app-bar__button" role="button" data-button="hamburger" data-controller="drawer" data-action="click->drawer#toggle">
         <svg class="top-app-bar__navigation-icon" fill="none" viewBox="0 0 24 24" stroke="currentColor">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
         </svg>
