--- a/app/views/layouts/_top_app_bar.html.erb
+++ b/app/views/layouts/_top_app_bar.html.erb
@@ -6,7 +6,10 @@
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
         </svg>
       </button>
-      <span class="top-app-bar__title">App Bar</span>
+      <button type="button" class="top-app-bar__button">
+        <span class="top-app-bar__title">Example.com Website</span>
+        <svg class="top-app-bar__navigation-icon" fill="#CBD5E0" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
+      </button>
     </section>
     <section class="top-app-bar__section top-app-bar__section--align-end" role="toolbar">
       <button class="top-app-bar__button" role="button">
