Finished up the team demo screen design

--- a/app/frontend/css/components/index.pcss
+++ b/app/frontend/css/components/index.pcss
@@ -6,3 +6,8 @@
 @import "_top-app-bar.pcss";
 @import "_app-content.pcss";
 @import "_main-content.pcss";
+@import "_pill.pcss";
+@import "_team.pcss";
+@import "_data-table.pcss";
+@import "_screen-title.pcss";
+@import "_button.pcss";
