--- a/app/views/layouts/_top_app_bar.html.erb
+++ b/app/views/layouts/_top_app_bar.html.erb
@@ -18,7 +18,7 @@
         </svg>
       </button>
       <button class="top-app-bar__button" role="button" data-button="user-menu">
-        <%= image_pack_tag 'user-face.jpg', class: "top-nav__avatar" %>
+        <%= image_pack_tag 'users/user-face-1.jpg', class: "top-nav__avatar" %>
       </button>
     </section>
   </div>
