--- a/app/frontend/css/base/_borders.pcss
+++ b/app/frontend/css/base/_borders.pcss
@@ -2,6 +2,6 @@
   --rounded-sm: 0.125rem;
   --rounded: 0.25rem;
   --rounded-md: 0.375rem;
-  --rounded-md: 0.5rem; 
+  --rounded-lg: 0.5rem; 
   --rounded-full: 9999px;
 }
