--- a/app/frontend/css/components/_top-app-bar.pcss
+++ b/app/frontend/css/components/_top-app-bar.pcss
@@ -55,6 +55,54 @@
   &--fixed-adjust {
     margin-top: var(--spacing-16);
   }
+
+  &__dropdown-container {
+    position: relative;
+
+    &:hover .top-app-bar__dropdown-menu {
+      display: block
+    }
+  }
+
+  &__dropdown-menu {
+    min-width: var(--spacing-48);
+    position: absolute;
+    box-shadow: var(--shadow-lg);
+    right: 0;
+    border-radius: var(--rounded-md);
+    transform-origin: top right;
+    background-color: white;
+    border: 1px solid var(--grey-200);
+    overflow: hidden;
+    
+    
+    display: none;
+  }
+
+  &__dropdown-link-container {
+    line-height: 1.25rem;
+    display: flex;
+    color: var(--grey-500);
+    width: 100%;
+    padding: var(--spacing-2) var(--spacing-4);
+    text-decoration: none;
+
+    &:hover {
+      background: var(--grey-100);
+    }
+  }
+
+  &__dropdown-link {
+    color: var(--grey-700);
+    font-size: var(--text-sm);
+  }
+
+  &__dropdown-icon {
+    align-self: center;
+    color: var(--grey-500);
+    height: 1.2rem;
+    margin-right: var(--spacing-2);
+  }
 }
 
 @media (--medium-viewport) {
