--- a/app/views/layouts/_top_app_bar.html.erb
+++ b/app/views/layouts/_top_app_bar.html.erb
@@ -17,9 +17,25 @@
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9"></path>
         </svg>
       </button>
-      <button class="top-app-bar__button" role="button" data-button="user-menu">
-        <%= image_pack_tag 'users/user-face-1.jpg', class: "top-nav__avatar" %>
-      </button>
+      <div class="top-app-bar__dropdown-container">
+        <button class="top-app-bar__button " role="button" data-button="user-menu">
+          <%= image_pack_tag 'users/user-face-1.jpg', class: "top-nav__avatar" %>
+        </button>
+        <nav class="top-app-bar__dropdown-menu">
+          <a href="#" class="top-app-bar__dropdown-link-container">
+            <svg class="top-app-bar__dropdown-icon" fill="currentColor" viewBox="0 0 20 20">
+              <path fill-rule="evenodd" d="M11.49 3.17c-.38-1.56-2.6-1.56-2.98 0a1.532 1.532 0 01-2.286.948c-1.372-.836-2.942.734-2.106 2.106.54.886.061 2.042-.947 2.287-1.561.379-1.561 2.6 0 2.978a1.532 1.532 0 01.947 2.287c-.836 1.372.734 2.942 2.106 2.106a1.532 1.532 0 012.287.947c.379 1.561 2.6 1.561 2.978 0a1.533 1.533 0 012.287-.947c1.372.836 2.942-.734 2.106-2.106a1.533 1.533 0 01.947-2.287c1.561-.379 1.561-2.6 0-2.978a1.532 1.532 0 01-.947-2.287c.836-1.372-.734-2.942-2.106-2.106a1.532 1.532 0 01-2.287-.947zM10 13a3 3 0 100-6 3 3 0 000 6z" clip-rule="evenodd"></path>
+            </svg>
+            <div class="top-app-bar__dropdown-link">Settings</div>
+          </a>
+          <a href="#" class="top-app-bar__dropdown-link-container">
+            <svg class="top-app-bar__dropdown-icon" fill="currentColor" viewBox="0 0 20 20">
+              <path fill-rule="evenodd" d="M3 3a1 1 0 011 1v12a1 1 0 11-2 0V4a1 1 0 011-1zm7.707 3.293a1 1 0 010 1.414L9.414 9H17a1 1 0 110 2H9.414l1.293 1.293a1 1 0 01-1.414 1.414l-3-3a1 1 0 010-1.414l3-3a1 1 0 011.414 0z" clip-rule="evenodd"></path>
+            </svg>
+            <div class="top-app-bar__dropdown-link">Sign Out</div>
+          </a>        
+        </nav>
+      </div>
     </section>
   </div>
 </header>
