First pass at Issues index screen

--- a/app/frontend/css/base/defaults.pcss
+++ b/app/frontend/css/base/defaults.pcss
@@ -3,3 +3,8 @@ body {
   background-color: var(--grey-100);
   display: flex;
 }
+
+*, ::after, ::before {
+    box-sizing: border-box;
+    border: 0 solid var(--grey-100);
+}
