--- a/app/views/demo/issues.html.erb
+++ b/app/views/demo/issues.html.erb
@@ -1,7 +1,11 @@
-<h2>
-  Issues
-</h2>
-<p>
-  Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente perferendis saepe sequi laudantium deleniti dolore optio natus incidunt harum? Placeat, obcaecati? Ipsa explicabo quisquam quod quis quo recusandae ipsam illo!
-</p>
+<div class="screen-title">
+  <h1 class="screen-title__heading">Issues</h1>
+  <a class="button button--primary">
+    Add Issue
+  </a>
+</div>
+
+<section class="issues">
+  <%= render partial: "demo/issue_card", collection: @issues, as: :issue %>
+</section>
     
