First pass at pagination component

--- a/app/views/demo/issues.html.erb
+++ b/app/views/demo/issues.html.erb
@@ -8,4 +8,6 @@
 <section class="issues">
   <%= render partial: "demo/issue_card", collection: @issues, as: :issue %>
 </section>
+
+<%= render partial: "demo/pagination" %>
     
