First pass of single issue screen

--- a/app/frontend/css/components/_app-content.pcss
+++ b/app/frontend/css/components/_app-content.pcss
@@ -4,3 +4,11 @@
   position: relative;
   width: 100%;
 }
+
+.avatar-group img:not(:first-of-type) {
+  margin-left: -15px;
+}
+
+.avatar-group img {
+  border: 2px solid var(--indigo-700);
+}
