--- a/app/frontend/css/components/_pill.pcss
+++ b/app/frontend/css/components/_pill.pcss
@@ -19,21 +19,25 @@
   &--success {
     background-color: var(--green-100);
     color: var(--green-800);
+    border: 1px solid var(--green-800);
   }
 
   &--danger {
     background-color: var(--red-100);
     color: var(--red-800);
+    border: 1px solid var(--red-800);
   }
 
   &--warning {
     background-color: var(--orange-100);
     color: var(--orange-800);
+    border: 1px solid var(--orange-800);
   }
 
   &--info {
     background-color: var(--blue-100);
     color: var(--blue-800);
+    border: 1px solid var(--blue-800);
   }
 
   &--small {
