--- a/app/views/demo/team.html.erb
+++ b/app/views/demo/team.html.erb
@@ -1,6 +1,6 @@
 <div class="screen-title">
   <h1 class="screen-title__heading">Team</h1>
-  <a class="button button--primary">
+  <a class="button button--primary button--large">
     Add User
   </a>
 </div>
