Update demo controller to use namespace

--- a/app/views/demo/main/_issue_card.html.erb
+++ b/app/views/demo/main/_issue_card.html.erb
@@ -1,4 +1,4 @@
-<%= link_to issue_path, class: "issue-card" do %>
+<%= link_to demo_issue_path, class: "issue-card" do %>
   <div class="issue-card__align-top">
     <div class="issue-card__align-start">
       <%= raw(status_icon(issue.status)) %>
