--- a/app/views/demo/main/issues.html.erb
+++ b/app/views/demo/main/issues.html.erb
@@ -6,8 +6,8 @@
 </div>
 
 <section class="issues">
-  <%= render partial: "demo/issue_card", collection: @issues, as: :issue %>
+  <%= render partial: "demo/main/issue_card", collection: @issues, as: :issue %>
 </section>
 
-<%= render partial: "demo/pagination" %>
+<%= render partial: "demo/main/pagination" %>
     
