--- a/app/views/demo/main/team.html.erb
+++ b/app/views/demo/main/team.html.erb
@@ -38,8 +38,8 @@
         </td>
         <td class="data-table__data">
           <div class="team__actions">
-            <%= link_to "Edit", team_path, class: "team__action-link" %>
-            <%= link_to "Remove", team_path, class: "team__action-link" %>
+            <%= link_to "Edit", demo_team_path, class: "team__action-link" %>
+            <%= link_to "Remove", demo_team_path, class: "team__action-link" %>
           </div>
         </td>
       </tr>
@@ -64,8 +64,8 @@
         </td>
         <td class="data-table__data">
           <div class="team__actions">
-            <%= link_to "Edit", team_path, class: "team__action-link" %>
-            <%= link_to "Remove", team_path, class: "team__action-link" %>
+            <%= link_to "Edit", demo_team_path, class: "team__action-link" %>
+            <%= link_to "Remove", demo_team_path, class: "team__action-link" %>
           </div>
         </td>
       </tr>
@@ -90,8 +90,8 @@
         </td>
         <td class="data-table__data">
           <div class="team__actions">
-            <%= link_to "Edit", team_path, class: "team__action-link" %>
-            <%= link_to "Remove", team_path, class: "team__action-link" %>
+            <%= link_to "Edit", demo_team_path, class: "team__action-link" %>
+            <%= link_to "Remove", demo_team_path, class: "team__action-link" %>
           </div>
         </td>
       </tr>
@@ -116,8 +116,8 @@
         </td>
         <td class="data-table__data">
           <div class="team__actions">
-            <%= link_to "Edit", team_path, class: "team__action-link" %>
-            <%= link_to "Remove", team_path, class: "team__action-link" %>
+            <%= link_to "Edit", demo_team_path, class: "team__action-link" %>
+            <%= link_to "Remove", demo_team_path, class: "team__action-link" %>
           </div>
         </td>
       </tr>
