--- a/app/views/demo/main/dashboard.html.erb
+++ b/app/views/demo/main/dashboard.html.erb
@@ -4,4 +4,7 @@
 <p>
   Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente perferendis saepe sequi laudantium deleniti dolore optio natus incidunt harum? Placeat, obcaecati? Ipsa explicabo quisquam quod quis quo recusandae ipsam illo!
 </p>
+
+<%# <%= link_to account_issues_path %> %>
+<%# <%= link_to account_issue_path(id: Affordances::Issue.new(id: 1)) %> %>
     
