Create sign up spec

--- a/app/views/marketing_pages/homepage.html.erb
+++ b/app/views/marketing_pages/homepage.html.erb
@@ -1,2 +1,3 @@
+<%= link_to "Sign up", new_user_registration_path %>
 <h1>MarketingPages#homepage</h1>
 <p>Find me in app/views/marketing_pages/homepage.html.erb</p>
