--- a/app/views/marketing_pages/homepage.html.erb
+++ b/app/views/marketing_pages/homepage.html.erb
@@ -1,3 +1,25 @@
-<%= link_to "Sign up", new_user_registration_path %>
-<h1>MarketingPages#homepage</h1>
-<p>Find me in app/views/marketing_pages/homepage.html.erb</p>
+<header>
+  <nav class="top_nav">
+    <div class="top_nav__left"></div>
+    <div class="top_nav__right">
+      
+      
+      <% if user_signed_in? %>
+      <%= link_to "Logout", destroy_user_session_path, class: "button button--secondary button--large", method: :delete %>
+      <% else %>
+        <%= link_to "Sign up", new_user_registration_path, class: "button button--secondary button--large" %>
+        <%= link_to "Login", sign_in_path, class: "button button--primary button--large" %>
+      <% end %>  
+    </div> 
+  </nav>
+</header>
+
+<main>
+  <section class="hero">
+    <h1 class="hero__headline">Test Manager</h1>
+    <h2 class="hero__tagline">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro numquam.
+    </h2>
+  </section>
+  
+</main>
