Move current account helper into new Account::BaseController class and fix failing tests

--- a/app/views/layouts/marketing.html.erb
+++ b/app/views/layouts/marketing.html.erb
@@ -6,9 +6,9 @@
     <%= csp_meta_tag %>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <%= stylesheet_pack_tag 'shared', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= stylesheet_pack_tag 'marketing', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'shared', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'marketing', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
