Created first pass of flash alert component.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
   </head>
 
   <body>
+    <%= render "shared/alert" %>
     <%= render "layouts/drawer" %>
     <div class="app-content">
       <%= render "layouts/top_app_bar" %>
