--- a/app/frontend/packs/shared.pcss
+++ b/app/frontend/packs/shared.pcss
@@ -1,3 +1,4 @@
 @import "normalize.css/normalize";
 @import "../css/base/variables.pcss";
 @import "../css/base/defaults.pcss";
+@import "../css/components/_alert.pcss";
