Minor bug fixes

--- a/app/frontend/css/components/_alert.pcss
+++ b/app/frontend/css/components/_alert.pcss
@@ -11,6 +11,7 @@
   padding: var(--spacing-4);
   align-items: center;
   box-shadow: var(--shadow-sm);
+  z-index: 100;
 
   &__content {
     display: flex;
