First pass at log in page

--- a/app/frontend/packs/shared.pcss
+++ b/app/frontend/packs/shared.pcss
@@ -2,3 +2,4 @@
 @import "../css/base/variables.pcss";
 @import "../css/base/defaults.pcss";
 @import "../css/components/_alert.pcss";
+@import "../css/pages/split-page.pcss";
