Add bare bones of homepage hero and menu

--- a/app/frontend/packs/marketing.pcss
+++ b/app/frontend/packs/marketing.pcss
@@ -11,7 +11,19 @@ header {
   display: flex;
   justify-content: space-between;
   box-shadow: var(--shadow-sm);
+  align-items: center;
 
+  &__left {
+    display: flex;
+    align-items: center;
+  }
+
+  &__link {
+    text-decoration: none;
+    margin: 0 1.5rem;
+    color: var(--grey-700);
+    font-weight: 500;
+  }
 }
 
 .button {
