First pass at sign up form

--- a/app/frontend/css/pages/split-page.pcss
+++ b/app/frontend/css/pages/split-page.pcss
@@ -1,6 +1,6 @@
 .split-page {
   display: flex;
-  max-height: 100vh;
+  height: 100vh;
 
   &__form {
     /* flex-grow: 1; */
@@ -15,6 +15,15 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+
+    & .row {
+      display: flex;
+      justify-content: space-between;
+
+      & > .field {
+        width: 45%;
+      }
+    }
   }
 
   &__graphic {
@@ -78,4 +87,9 @@ input {
 
 input:-webkit-autofill {
     /* -webkit-text-fill-color: blue !important; */
+}
+
+.label-helper {
+  font-size: var(--text-xs);
+  color: var(--grey-500);
 }
