--- a/app/frontend/packs/marketing.pcss
+++ b/app/frontend/packs/marketing.pcss
@@ -31,7 +31,7 @@ header {
   text-decoration: none;
 
   &--primary {
-    background-color: var(--purple-700);
+    background-color: var(--indigo-600);
     color: white;
   }
 
