--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,48 +1,64 @@
-<h2>Sign up</h2>
+<div class="split-page">
+  <section class="split-page__form">
+  <div class="form-container">
+    <%= image_pack_tag "workflow-logo-on-white.svg", class: "form-logo" %>
+    <h1>Create your new account</h1>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-  <div class="field">
-    <%= f.label :first_name %><br />
-    <%= f.text_field :first_name, autofocus: true, autocomplete: "fname" %>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= render "devise/shared/error_messages", resource: resource %>
+      <div class="row">
+        <div class="field">
+          <%= f.label :first_name, class: "form-label" %><br />
+          <%= f.text_field :first_name, autofocus: true, autocomplete: "fname", class: "form-text" %>
+        </div>
+
+        <div class="field">
+          <%= f.label :last_name, class: "form-label" %><br />
+          <%= f.text_field :last_name, autocomplete: "lname", class: "form-text" %>
+        </div>
+      </div>
+
+      <div class="field">
+        <%= f.label :email, class: "form-label" %><br />
+        <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-text" %>
+      </div>
+
+      <div class="field">
+        <%= f.label :password, class: "form-label" %>
+        <% if @minimum_password_length %>
+        <em class="label-helper">(<%= @minimum_password_length %> characters minimum)</em>
+        <% end %><br />
+        <%= f.password_field :password, autocomplete: "new-password", class: "form-text" %>
+      </div>
+
+      <div class="field">
+        <%= f.label :password_confirmation, class: "form-label" %><br />
+        <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-text" %>
+      </div>
+
+      <div class="row">
+        <div class="field"> 
+          <%= f.label :job_title, class: "form-label" %><br />
+          <%= f.text_field :job_title, class: "form-text" %>
+        </div>
+
+        <div class="field">
+          <%= f.label :organization, class: "form-label" %><br />
+          <%= f.text_field :organization, class: "form-text" %>
+        </div>
+      </div>
+
+      <div class="actions">
+        <%= f.submit "Sign up", class: "button button--primary button--large form-btn" %>
+      </div>
+    <% end %>
+    
+    <%- if controller_name != 'sessions' %>
+      <%= link_to "Already a customer? Log in here.", sign_in_path, class: "sign-in-cta" %>
+    <% end %>
   </div>
-
-  <div class="field">
-    <%= f.label :last_name %><br />
-    <%= f.text_field :last_name, autocomplete: "lname" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :job_title %><br />
-    <%= f.text_field :job_title %>
-  </div>
-
-  <div class="field">
-    <%= f.label :organization %><br />
-    <%= f.text_field :organization %>
-  </div>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+  </section>
+  <aside class="split-page__graphic">
+    <%= image_pack_tag "sign-up.svg", class: "split-page__image"%>
+  </aside>
+</div>
