--- a/app/views/shared/_alert.html.erb
+++ b/app/views/shared/_alert.html.erb
@@ -1,5 +1,5 @@
 <% flash.each do |type, message| %>
-  <aside class="<%= "alert alert--#{type.to_s} fade-in" %>">
+  <aside data-controller="alert" class="<%= "alert alert--#{type.to_s} fade-in" %>">
     
     <div class="alert__content">
       <svg class="alert__icon" viewBox="0 0 20 20" fill="currentColor">
@@ -9,10 +9,10 @@
         <%= message %>
       </div>
     </div>
-    <button class="alert__button">
+    <button class="alert__button" data-action="click->alert#close">
       <svg class="alert__icon" viewBox="0 0 20 20" fill="currentColor">
         <path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path>
       </svg>
     </div>
   </aside>
-<% end %>
+<% end %> 
