Use other layout for account selector screen

--- a/app/frontend/packs/shared.pcss
+++ b/app/frontend/packs/shared.pcss
@@ -2,4 +2,6 @@
 @import "../css/base/variables.pcss";
 @import "../css/base/defaults.pcss";
 @import "../css/components/_alert.pcss";
+@import "../css/components/_data-table.pcss";
+@import "../css/components/_screen-title.pcss";
 @import "../css/pages/split-page.pcss";
