Improve navigation slightly

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,5 +1,3 @@
-<%= current_account.organization_name %>
-
-<%= link_to "Homepage", root_path(script_name: "/")%>
-
-<%= link_to "Team", account_team_path %>
+<div class="screen-title">
+  <h1 class="screen-title__heading"><%= current_account.organization_name %> Dashboard</h1>
+</div>
