Write initial invitation test

--- a/app/views/accounts/users/index.html.erb
+++ b/app/views/accounts/users/index.html.erb
@@ -1,8 +1,7 @@
 <div class="screen-title">
   <h1 class="screen-title__heading">Team</h1>
-  <a class="button button--primary button--large">
-    Add User
-  </a>
+
+  <%= link_to "Add User", "#", class: "button button--primary button--large" %>
 </div>
 
 
