Allow users to invite users to an account

--- a/app/views/accounts/users/index.html.erb
+++ b/app/views/accounts/users/index.html.erb
@@ -1,7 +1,7 @@
 <div class="screen-title">
   <h1 class="screen-title__heading">Team</h1>
 
-  <%= link_to "Add User", "#", class: "button button--primary button--large" %>
+  <%= link_to "Add User", new_invitation_path, class: "button button--primary button--large" %>
 </div>
 
 
