--- a/app/views/accounts/invitations/accept.html.erb
+++ b/app/views/accounts/invitations/accept.html.erb
@@ -8,7 +8,7 @@
       <%= render "user_accept" %>
     <% else %>
       <%= render "anonymous_accept" %>
-    <% end %>%>
+    <% end %>
     
   </div>
   </section>
