--- a/app/views/accounts/registrations/new.html.erb
+++ b/app/views/accounts/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: @account do |f| %>
+<%= form_with model: @account, url: accounts_registration_index_path do |f| %>
   <%= f.text_field :organization_name, value: current_user.organization.to_s %>
   <%= f.submit "Create" %>
 <% end %>
