--- a/app/views/accounts/issues/show.html.erb
+++ b/app/views/accounts/issues/show.html.erb
@@ -1,9 +1,11 @@
 <div class="screen-title">
   <h1 class="screen-title__heading"><%= @issue.title %></h1>
-  
-  <a href="#" class="button button--primary button--large">
-    Edit Issue
-  </a>
+
+  <% if allowed_to?(:edit?, @issue) %>
+    <a href="#" class="button button--primary button--large">
+      Edit Issue
+    </a>
+  <% end %>
 </div>
 
 
